Add code highlighting support;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -6,7 +6,8 @@
   "Search": "Search",
   "ToolsGo": "Go",
   "Dotnet9ToolsTitle": "Dotnet9 toolbox",
-  "Dotnet9ToolsDescription": "It plans to provide a series of free and open-source online tools for yourself and others.",
+  "Dotnet9ToolsDescription":
+    "It plans to provide a series of free and open-source online tools for yourself and others.",
   "GetStarted": "Get Started",
   "GoToDotnet9Blog": "Go To Dotnet9 blog",
   "HowToDevelopmentDesc": "How was it developed?",
@@ -14,7 +15,8 @@
   "SourceCode": "Source code",
   "IcoToolTitle": "Online Icon Conversion",
   "IcoToolDesc": "Jpg, PNG, BMP and other one click conversion ico",
-  "IcoToolUseMemo": "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
+  "IcoToolUseMemo":
+    "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
   "IcoToolMFileInputPlaceholder": "Please select a source picture",
   "IcoToolMFileInputLabel": "Source picture",
   "IcoToolMButtonLoaderContent": "Convert ICO...",
