--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -13,7 +13,7 @@
   "HowToDevelopmentDesc": "How was it developed?",
   "ToSuggest": "Make complaints about",
   "SourceCode": "Source code",
-  "IcoToolTitle": "Online Icon Conversion",
+  "IcoToolTitle": "Icon Conversion",
   "IcoToolDesc": "Jpg, PNG, BMP and other one click conversion ico",
   "IcoToolUseMemo":
     "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
@@ -21,5 +21,13 @@
   "IcoToolMFileInputLabel": "Source picture",
   "IcoToolMButtonLoaderContent": "Convert ICO...",
   "IcoToolMButtonChildContent": "Convert and download icon now",
-  "IcoToolFileSizeLimitMessage": "Please select a picture smaller than 2MB"
+  "IcoToolFileSizeLimitMessage": "Please select a picture smaller than 2MB",
+  "TimestampToolTitle": "Timestamp",
+  "TimestampToolDesc": "Timestamp conversion",
+  "TimestampToolDateNow": "Now: ",
+  "TimestampToolTimestamp": "Timestamp",
+  "TimestampToolConvert": "Convert >>",
+  "TimestampToolBeijingTime": "Beijing Time",
+  "TimestampToolKindSeconds": "Seconds",
+  "TimestampToolKindMilliseconds": "Milliseconds"
 }
