--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -12,13 +12,21 @@
   "HowToDevelopmentDesc": "如何开发的？",
   "ToSuggest": "我要建议（吐槽）",
   "SourceCode": "我要浏览源码",
-  "IcoToolTitle": "在线Icon图标转换",
-  "IcoToolDesc": "jpg、png、bmp等图片一键转换成ico图标",
+  "IcoToolTitle": "Icon转换",
+  "IcoToolDesc": "将jpg、png、bmp等图片一键转换成ico图标",
   "IcoToolUseMemo":
     "请选择需要转换的图片，比如：png、jpg、jpeg、tmp等，默认转换的图片尺寸包含：16x16+32x32+48x48+256x256，转换完成不会保存源文件和生成的Icon图标，请放心使用。",
   "IcoToolMFileInputPlaceholder": "请选择源图片",
   "IcoToolMFileInputLabel": "源图片",
   "IcoToolMButtonLoaderContent": "转换Ico中...",
   "IcoToolMButtonChildContent": "立即转换并下载Icon",
-  "IcoToolFileSizeLimitMessage": "请选择小于2MB的图片"
+  "IcoToolFileSizeLimitMessage": "请选择小于2MB的图片",
+  "TimestampToolTitle": "时间戳",
+  "TimestampToolDesc": "时间戳转换",
+  "TimestampToolDateNow": "现在：",
+  "TimestampToolTimestamp": "时间戳",
+  "TimestampToolConvert": "转换>>",
+  "TimestampToolBeijingTime": "北京时间",
+  "TimestampToolKindSeconds": "秒",
+  "TimestampToolKindMilliseconds": "毫秒"
 }
