add post about timestamp tool;

--- a/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
+++ b/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
@@ -482,6 +482,6 @@ public class ImageHelperTests
 
 >本工具源码：[IcoTool](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 >
->介绍文章：[Blazor在线Ico转换工具](https://dotnet9.com/?p=1715（在新窗口中打开）)
+>介绍文章：[Blazor在线Ico转换工具](https://dotnet9.com/?p=1715)
 >
 >在线演示地址：[https://tool.dotnet9.com/ico](https://tool.dotnet9.com/ico)
