--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -28,6 +28,7 @@
   "TimestampToolTimestamp": "Timestamp",
   "TimestampToolConvert": "Convert >>",
   "TimestampToolBeijingTime": "Beijing Time",
+  "TimestampToolTimestampKind": "Kind",
   "TimestampToolKindSeconds": "Seconds",
   "TimestampToolKindMilliseconds": "Milliseconds"
 }
