--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -27,6 +27,7 @@
   "TimestampToolTimestamp": "时间戳",
   "TimestampToolConvert": "转换>>",
   "TimestampToolBeijingTime": "北京时间",
+  "TimestampToolTimestampKind": "单位",
   "TimestampToolKindSeconds": "秒",
   "TimestampToolKindMilliseconds": "毫秒"
 }
