update public layout;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -6,6 +6,7 @@
   "Search": "Search",
   "ToolsGo": "Go",
   "Dotnet9ToolsTitle": "Dotnet9 toolbox",
+  "Motto": "Industry is more diligent than pleasure",
   "Dotnet9ToolsDescription":
     "It plans to provide a series of free and open-source online tools for yourself and others.",
   "GetStarted": "Get Started",
