--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -6,6 +6,7 @@
   "Search": "搜索",
   "ToolsGo": "进入",
   "Dotnet9ToolsTitle": "Dotnet9工具箱",
+  "Motto": "业精于勤而荒于嬉",
   "Dotnet9ToolsDescription": "计划提供一系列免费开源在线工具给自己用，也分享给别人用。",
   "GetStarted": "开始使用吧",
   "GoToDotnet9Blog": "浏览Dotnet9博客",
