--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -11,9 +11,9 @@
   "SiteOwner": "沙漠尽头的狼",
   "PostFrom": "文章来源",
   "Motto": "业精于勤而荒于嬉",
-  "Dotnet9ToolsDescription": "计划提供一系列免费开源在线工具给自己用，也分享给别人用。",
+  "Dotnet9ToolsDescription": "免费开源在线工具，方便自己，方便他人",
   "GetStarted": "开始使用吧",
-  "GoToDotnet9Blog": "浏览Dotnet9博客",
+  "GoToBlog": "浏览博客",
   "HowToDevelopmentDesc": "如何开发的？",
   "ToSuggest": "我要建议（吐槽）",
   "SourceCode": "我要浏览源码",
