--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -11,15 +11,16 @@
   "SiteOwner": "Wolf at the end of the desert",
   "PostFrom": "Post from",
   "Motto": "Industry is more diligent than pleasure",
-  "Dotnet9ToolsDescription": "It plans to provide a series of free and open-source online tools for yourself and others.",
+  "Dotnet9ToolsDescription": "Free and open source online tools for myself and others",
   "GetStarted": "Get Started",
-  "GoToDotnet9Blog": "Go To Dotnet9 blog",
+  "GoToBlog": "Go to blog",
   "HowToDevelopmentDesc": "How was it developed?",
   "ToSuggest": "Make complaints about",
   "SourceCode": "Source code",
   "IcoToolTitle": "Icon Conversion",
   "IcoToolDesc": "Jpg, PNG, BMP and other one click conversion ico",
-  "IcoToolUseMemo": "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
+  "IcoToolUseMemo":
+    "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
   "IcoToolMFileInputPlaceholder": "Please select a source picture",
   "IcoToolMFileInputLabel": "Source picture",
   "IcoToolMButtonLoaderContent": "Convert ICO...",
