Add WPF development flow chart article sharing;

--- a/src/Dotnet9.Tools.Web/wwwroot/doc/blog_contents/uploads/2022/03/2022-03-02_01.md
+++ b/src/Dotnet9.Tools.Web/wwwroot/doc/blog_contents/uploads/2022/03/2022-03-02_01.md
@@ -1,17 +1,17 @@
-做了几版个人博客网站，虽然基本都只做了几个页面展示，自足感确是好多好多:
+做了几版个人博客网站，虽然基本都只做了几个页面展示，自足感确是好多好多，下面是几版使用的技术:
 
-1. [ASP.NET Core MVC](https://github.com/dotnet9/lequ/tree/main/src/dotnet_blog)
-2. [Flutter Web](https://github.com/dotnet9/lequ/tree/main/src/flutter_blog)
-3. [Abp vNext + Blazor Server](https://github.com/dotnet9/dotnet9.com/tree/abp-blazor-server)
-4. .NET Core Web API + Vue 3.0: 跟着老张的书做了后端和前端首页
-5. Blazor Server + [Masa Blazor](https://masa-blazor-docs-dev.lonsid.cn/)：目前Dotnet9工具箱使用的技术栈
+1. 第1版：[Flutter Web](https://github.com/dotnet9/lequ/tree/main/src/flutter_blog)
+2. 第2版：[ASP.NET Core MVC](https://github.com/dotnet9/lequ/tree/main/src/dotnet_blog)
+3. 第3版：[Abp vNext + Blazor Server](https://github.com/dotnet9/dotnet9.com/tree/abp-blazor-server)
+4. 第4版：.NET Core Web API + Vue 3.0: 跟着老张的书做了后端和前端首页
+5. 第5版：Blazor Server + [Masa Blazor](https://masa-blazor-docs-dev.lonsid.cn/)：目前Dotnet9工具箱使用的技术栈
 
-边学边做，技术长进不少，通过动手做才明白做一个网站好不容易，也对做博客网站应该怎么选型有了一定的认知，对于上面使用的技术栈简单罗列比较：
+边学边做，技术长进不少，通过动手做才明白做一个网站不容易，也对做博客网站技术栈选型有了一定的认知，对于上面使用的技术栈简单罗列比较：
 
-1. MVC：应该是最适宜需要SEO类型的网站，单体就好。
-2. Flutter Web：目前最不适合选用的技术，首次加载2MB左右的Flutter js库，2、30秒等待，有做SEO的第三方插件，但不成熟，就和选Flutter做桌面一样，需要再等等...
-3. Abp vNext + Blazor Server：太重了，运行内存400MB左右，个人手撸CRUD比较费时，即使有代码生成器，也不应该选用这种方式做博客网站。
-4. .NET Core Web API + Vue 3.0：前后端分离，前端Vue比较熟用起也很爽，稍微有点麻烦，没有MVC利索。
-5. Blazor Server：选Blazor Server，对做.NET的我来说，应该是仅次于MVC的选择吧，说实话，找工作靠Blazor是不太可能的，但个人玩是非常爽的。
+1. 第1版：目前最不适合选用的技术，首次加载2MB左右的Flutter js库，2、30秒加载白屏等待，有做SEO的第三方插件，但不成熟，就和选Flutter做桌面一样，需要再等等...
+2. 第2版：应该是最适宜需要SEO类型的网站，单体就好，我看油管这位大佬的视频学习的MVC：[链接学习](https://www.youtube.com/playlist?list=PLKnjBHu2xXNNkinaVhPqPZG0ubaLN63ci)。
+3. 第3版：Abp vNext太重了，运行内存400MB左右，个人手撸CRUD比较费时，即使有代码生成器，也不应该选用这种方式做博客网站。
+4. 第4版：前后端分离，前端Vue比较熟用起来也很爽，稍微有点麻烦，没有MVC利索。
+5. 第5版：与第三版Abp vNext集成的Blazor Server相比，当时是工作需要练手选择的。这次选原生的Blazor Server，对做.NET的我来说，应该是仅次于MVC的选择吧，说实话，找工作靠Blazor是可能性是很小的，但个人玩是非常爽的。
 
 汇报下我现在的网站开发情况吧：
