add tag cloud and update page style;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -1,12 +1,12 @@
 {
   "Home": "Home",
   "Tools": "Tools",
-  "Blog": "Blog",
-  "Album": "Album",
-  "Category": "Category",
+  "Blog": "Blogs",
+  "Album": "Albums",
+  "Category": "Categories",
+  "Tag": "Tags",
   "About": "About",
   "Search": "Search",
-  "ToolsGo": "Go",
   "Dotnet9ToolsTitle": "Dotnet9 toolbox",
   "SiteOwner": "Wolf at the end of the desert",
   "PostFrom": "Post from",
