--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -4,9 +4,9 @@
   "Blog": "博客",
   "Album": "专辑",
   "Category": "分类",
+  "Tag": "标签云",
   "About": "关于",
   "Search": "搜索",
-  "ToolsGo": "进入",
   "Dotnet9ToolsTitle": "Dotnet9工具箱",
   "SiteOwner": "沙漠尽头的狼",
   "PostFrom": "文章来源",
