add 404 page;add post search;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -10,6 +10,11 @@
   "Search": "Search",
   "Dotnet9ToolsTitle": "Dotnet9 toolbox",
   "SiteOwner": "Wolf at the end of the desert",
+  "NoFilter": "Please enter query keywords to search",
+  "404Title": "404",
+  "404Description": "404, I can't find the content you need. Try another way.",
+  "404Leave": "Get me out of here!",
+  "NoContentFound": "Sorry, the content you searched for was not found. Please try searching with other keywords.",
   "PostFrom": "Post from",
   "Motto": "Industry is more diligent than pleasure",
   "Dotnet9ToolsDescription": "Free and open source online tools for myself and others",
