--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -10,6 +10,11 @@
   "Search": "搜索",
   "Dotnet9ToolsTitle": "Dotnet9工具箱",
   "SiteOwner": "沙漠尽头的狼",
+  "NoFilter": "请输入查询关键字进行搜索",
+  "404Title": "有点糟糕404了",
+  "404Description": "404啦，没找到您需要的内容，尝试换个方式吧。",
+  "404Leave": "带我离开这里吧!",
+  "NoContentFound": "抱歉，你搜索的内容未找到，请尝试使用其他关键词搜索。",
   "PostFrom": "文章来源",
   "Motto": "业精于勤而荒于嬉",
   "Dotnet9ToolsDescription": "免费开源在线工具，方便自己，方便他人",
