add post copy right; fix card item card;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -9,6 +9,11 @@
   "About": "About",
   "Search": "Search",
   "Dotnet9ToolsTitle": "Dotnet9 toolbox",
+  "CopyrightTypeDefault": "If not stated, the blog post are organized and published by our site (Dotnet9), welcome to reprint, please indicate the source:",
+  "CopyrightTypeOther": "This blog post is from reprint, the views of this blog post do not represent the position of our site (Dotnet9), please contact the original author for reprint:",
+  "BlogPostOriginal": "Original",
+  "BlogPostOriginalTitle": "Original title",
+  "BlogPostOriginalLink": "Original link",
   "SiteOwner": "Wolf at the end of the desert",
   "NoFilter": "Please enter query keywords to search",
   "404Title": "404",
@@ -25,8 +30,7 @@
   "SourceCode": "Source code",
   "IcoToolTitle": "Icon Conversion",
   "IcoToolDesc": "Jpg, PNG, BMP and other one click conversion ico",
-  "IcoToolUseMemo":
-    "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
+  "IcoToolUseMemo": "Please select the image to be converted, such as: png, jpg, jpeg, tmp, etc. The default converted image size includes: 16x16+32x32+48x48+256x256, the conversion will not save the source file and the generated Icon icon, please use it with confidence.",
   "IcoToolMFileInputPlaceholder": "Please select a source picture",
   "IcoToolMFileInputLabel": "Source picture",
   "IcoToolMButtonLoaderContent": "Convert ICO...",
