--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -9,6 +9,11 @@
   "About": "关于",
   "Search": "搜索",
   "Dotnet9ToolsTitle": "Dotnet9工具箱",
+  "CopyrightTypeDefault": "如未说明，文章均由本站(Dotnet9工具箱)整理、发布，欢迎转载，转载请注明出处：",
+  "CopyrightTypeOther": "本文来自转载，本文观点不代表本站(Dotnet9工具箱)立场，转载请联系原作者：",
+  "BlogPostOriginal": "原文出处",
+  "BlogPostOriginalTitle": "原文标题",
+  "BlogPostOriginalLink": "原文链接",
   "SiteOwner": "沙漠尽头的狼",
   "NoFilter": "请输入查询关键字进行搜索",
   "404Title": "有点糟糕404了",
@@ -25,8 +30,7 @@
   "SourceCode": "我要浏览源码",
   "IcoToolTitle": "Icon转换",
   "IcoToolDesc": "将jpg、png、bmp等图片一键转换成ico图标",
-  "IcoToolUseMemo":
-    "请选择需要转换的图片，比如：png、jpg、jpeg、tmp等，默认转换的图片尺寸包含：16x16+32x32+48x48+256x256，转换完成不会保存源文件和生成的Icon图标，请放心使用。",
+  "IcoToolUseMemo": "请选择需要转换的图片，比如：png、jpg、jpeg、tmp等，默认转换的图片尺寸包含：16x16+32x32+48x48+256x256，转换完成不会保存源文件和生成的Icon图标，请放心使用。",
   "IcoToolMFileInputPlaceholder": "请选择源图片",
   "IcoToolMFileInputLabel": "源图片",
   "IcoToolMButtonLoaderContent": "转换Ico中...",
