Add some tool translations；

--- a/src/Dotnetools/src/tools/token-generator/locales/en.yml
+++ b/src/Dotnetools/src/tools/token-generator/locales/en.yml
@@ -7,3 +7,5 @@ tools:
     lowercase: Lowercase (abc...)
     numbers: Numbers (123...)
     symbols: Symbols (!-;...)
+    copy: Copy
+    refresh: Refresh
