--- a/src/Dotnetools/src/tools/token-generator/locales/fr.yml
+++ b/src/Dotnetools/src/tools/token-generator/locales/fr.yml
@@ -7,3 +7,5 @@ tools:
     lowercase: Minuscules (abc...)
     numbers: Chiffres (123...)
     symbols: Symboles (!-;...)
+    copy: Copy
+    refresh: Refresh
