--- a/src/Dotnet9.Tools/src/tools/token-generator/locales/en.yml
+++ b/src/Dotnet9.Tools/src/tools/token-generator/locales/en.yml
@@ -2,10 +2,14 @@ tools:
   token-generator:
     title: Token generator
     description: Generate random string with the chars you want, uppercase or lowercase letters, numbers and/or symbols.
-
+    
     uppercase: Uppercase (ABC...)
     lowercase: Lowercase (abc...)
     numbers: Numbers (123...)
     symbols: Symbols (!-;...)
-    copy: Copy
-    refresh: Refresh
+    length: Length
+    tokenPlaceholder: 'The token...'
+    copied: Token copied to the clipboard
+    button:
+      copy: Copy
+      refresh: Refresh
